[package]
name = "VKTServer"
version = "1.0.0"
authors = ["vladislav.kosyanenko@gmail.com"]
description = "vkt_server"
readme = "README.md"
keywords = ["VKT", "http", "server", "ssl"]
edition = "2021"


[dependencies]
clap = "3.1.15"
termcolor = "1.1.3"
lazy_static = "1.4.0"
time = "0.3.9"
chrono = "0.4.19"
flate2 = "1.0.23"
filetime = "0.2.16"
pretty-bytes = "0.2.2"
rand = "0.8.5"
url = "2.2.2"
hyper-native-tls = { version = "0.3.0", optional = true }
mime_guess = "2.0.4"
open = "2.1.2"
# Iron crates
iron = "0.6.1"
iron-cors = "0.8.0"
multipart = { version = "0.18.0", default-features = false, features = ["server", "iron"] }
htmlescape = "0.3.1"
percent-encoding = "2.1.0"
path-dedot = "3.0.17"

[features]
default = ["tls"]
tls = ["hyper-native-tls"]

